tests/integration/snapshots/integration__conformance__n_number_0_capital_e.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
[0E]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:4
  |
1 | [0E]
  |  --^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
